# six-birds-agent

./: .gitignore  .package-repo-snapshot.json  CITATION.cff  README.md  TechRxiv_QA_Report.md  TechRxiv_Submission_Notes.md  pyproject.toml  sitecustomize.py
archive/zenodo_preprint/: agency.tex  preamble.tex
docs/experiments/: README.md  ablations.md  learning_theta.md  packaging_ring.md  protocol_horizon.md  sweep_noise_maintenance.md
lean/: Agency.lean  README.md  lake-manifest.json  lakefile.toml
lean/Agency/: Viability.lean
paper/: README.md  agency.tex  checklist.md  preamble.tex
paper/assets/: zenodo_related_works.csv
paper/bib/: refs.bib
paper/figures/: README.md
paper/sections/: 01_introduction.tex  03_packaging_engine.tex  04_exhibit_packaging.tex  05_exhibit_nulls.tex  07_exhibit_ablations.tex  (+5 more)
results/: README.md
sbt_agency/: __init__.py
scripts/: audit_results.py  build_paper.py  export_paper_assets.py  measure_learning_theta.py  measure_packaging_ring.py  measure_protocol_horizon.py  null_schedule_trap.py  null_single_action.py  package_arxiv.sh  run_ablations.py  run_all_experiments.py  run_rollouts.py  sweep_noise_maintenance.py
tests/: test_audit_results.py  test_channel.py  test_claim_invariants.py  test_empowerment.py  test_env_ring_agent.py  test_exp_configs_smoke.py  test_feasible_empowerment.py  test_import.py  test_kernel.py  test_learning_theta_smoke.py  test_ledger_viability.py  test_metrics_smoke.py  test_null_schedule_trap.py  test_null_single_action.py  test_packaging.py  test_repro.py  test_sim.py  test_viability.py
(+22 files in other folders)
